@@ -1,12 +1,7 @@
 {
-  "count": 40,
-  "uniques": 11,
+  "count": 37,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2025-07-26T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-07-28T00:00:00Z",
       "count": 3,
